<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GLV</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Type here dude</string>
    <string name="button_send">Goo!!</string>
    <string name="title_activity_display_message">My Message</string>
	<string name="action_search"> What do you want to search ? </string>
	<string name="text_message"> Hi, Android!!</string>
	<string name="alert_button_text">Quit</string>
	<string name="save_button_text">Save</string>
	<string name="call_cook_text">Call Cook</string>
	<string name="refresh_button_text">Refresh</string>
	<string name="shopping">Add Item to Shopping List</string>
	<string name="event">Add an Event</string>
</resources>
