<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical">
    <Switch 
    android:id="@+id/togglebutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textOn="At Home"
    android:textOff="Outside"
    android:onClick="onToggleClicked"/>

    <RadioGroup android:layout_height = "wrap_content" 
        android:layout_width="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping">
        </RadioButton>
        <RadioButton android:id="@+id/radio_event"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/event">
        </RadioButton>
    </RadioGroup>
    
    <EditText android:id="@+id/edit_message"
        android:layout_width= "fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
	
    <WebView 
        android:id="@+id/myWebView"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
    </WebView>
    
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom" >
	<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" />
    
	<Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:onClick="saveAction" />
	<Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_button_text"
        android:onClick="refreshButtonClicked" />
	<Button
        android:id="@+id/buttonAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_button_text" />
	
	</LinearLayout>
</LinearLayout>
</ScrollView>
